<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title_text">My Nanodegree Apps!</string>
    <string name="spotify_streamer_text">SPOTIFY STREAMER</string>
    <string name="scores_text">SCORES APP</string>
    <string name="library_text">LIBRARY APP</string>
    <string name="build_it_bigger_text">BUILD IT BIGGER</string>
    <string name="xyz_reader_text">XYZ READER</string>
    <string name="capstone_text">CAPSTONE: MY OWN APP</string>

    <string name="action_settings">Settings</string>
</resources>
